Fixing daemons pid

--- a/supervisor-centralized/supervisord.conf
+++ b/supervisor-centralized/supervisord.conf
@@ -27,7 +27,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:paccoind]
 directory=/root/
-command=/usr/bin/paccoin-daemon.sh
+command=/root/paccoind -printtoconsole
 environment=HOME=/root
 numprocs=1
 priority=999
@@ -46,7 +46,7 @@ stdout_capture_maxbytes=1MB
 
 [program:sentinel]
 directory=/root/sentinel
-command=/root/sentinel/run.sh
+command=/bin/bash -c 'HOME=/root && cd /root/sentinel && date \"+%FT%T\" && ./venv/bin/python bin/sentinel.py'
 environment=HOME=/root
 user=root
 numprocs=1
