Allowing non root user to install

--- a/pac-masternode-setup/supervisord.conf
+++ b/pac-masternode-setup/supervisord.conf
@@ -26,9 +26,9 @@ minprocs=200
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:paccoind]
-directory=/root/
+directory=_HOME_
 command=/usr/bin/paccoin-daemon.sh
-environment=HOME=/root
+environment=HOME=_HOME_
 numprocs=1
 priority=999
 autostart=true
@@ -39,15 +39,15 @@ exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
 redirect_stderr=true
-stdout_logfile=/root/.paccoincore/debug.log
+stdout_logfile=_HOME_/.paccoincore/debug.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 
 [program:sentinel]
-directory=/root/sentinel
-command=/root/sentinel/run.sh
-environment=HOME=/root
+directory=_HOME_/sentinel
+command=_HOME_/sentinel/run.sh
+environment=HOME=_HOME_
 user=root
 numprocs=1
 priority=999
@@ -59,7 +59,7 @@ exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
 redirect_stderr=true
-stdout_logfile=/root/sentinel/sentinel-cron.log
+stdout_logfile=_HOME_/sentinel/sentinel-cron.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
