Adding Readme and allowing configuring username and password

--- a/pac-masternode-setup/supervisord.conf
+++ b/pac-masternode-setup/supervisord.conf
@@ -3,14 +3,14 @@ file=/tmp/supervisor.sock   ; the path to the socket file
 
 [inet_http_server]
 port=*:9001
-username=yoda
-password=master
+username=_USERNAME_
+password=_PASSWORD_
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
 serverurl=http://127.0.0.1:9001
-username=yoda
-password=master
+username=_USERNAME_
+password=_PASSWORD_
 
 [supervisord]
 logfile=/tmp/supervisord.log
