--- a/pac-masternode-setup/supervisord.conf
+++ b/pac-masternode-setup/supervisord.conf
@@ -14,7 +14,7 @@ password=_PASSWORD_
 
 [supervisord]
 logfile=/tmp/supervisord.log
-logfile_maxbytes=50MB
+logfile_maxbytes=100MB
 logfile_backups=10
 loglevel=info
 pidfile=/tmp/supervisord.pid
@@ -24,6 +24,9 @@ minprocs=200
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[include]
+files = /etc/supervisor/conf.d/*.conf
 
 [program:paccoind]
 directory=_HOME_
